<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Station Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="add_location">Add new station</string>
    <string name="ic_action_new">Add</string>
    <string name="title_activity_add_location">Edit station</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_location_name">Name</string>
    <string name="add">add</string>
    <string name="save">Save</string>
    <string name="alarms_active">Alarm active</string>
    <string name="start">Start StationAlarm</string>
    <string name="activate">Activate</string>
    <string name="deactivate">Deactivate</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="stop">Stop StationAlarm</string>
    <string name="add_location_info">Hint: Use a long press to set a location.</string>
    <string name="add_location_distance">Distance</string>
    <string name="add_location_distance_value">(%3.1f km)</string>
    <string name="add_location_marker_desc" formatted="false">Lat: %.6f\nLon: %.6f</string>
    <string name="show_alarm_text" formatted="false">Alarm for %s (%.1f km away)</string>
    <string name="err_no_active_station">No active station!</string>
    
    <string name="settings_lang_changed">Changing the language requires an app restart!</string>

    <string name="pref_group_general_header">General</string>
    <string name="pref_group_alarm_header">Alarm</string>
    
    <string name="pref_lang_header">Language</string>
    <string name="pref_lang_val_default">default</string>
    <string-array name="pref_lang_values">
        <item>default</item>
        <item>en</item>
        <item>de</item>
    </string-array>
    <string-array name="pref_lang_entries">
        <item>Default</item>
        <item>English</item>
        <item>German</item>
    </string-array>
    <string name="pref_lang_sum_default">System default</string>
    <string name="pref_lang_sum_en">English</string>
    <string name="pref_lang_sum_de">German</string>
    
    <string name="pref_vibrate_header">Vibration</string>
    <string name="pref_vibrate_val_default">vibrate</string>
    <string-array name="pref_vibrate_values">
        <item>never</item>
        <item>vibrate</item>
        <item>normal</item>
        <item>always</item>
    </string-array>
    <string-array name="pref_vibrate_entries">
        <item>Never</item>
        <item>Only in profiles: vibrate and normal</item>
        <item>Only in profile: normal</item>
        <item>Always</item>
    </string-array>
    <string name="pref_vibrate_sum_never">Never using vibration</string>
    <string name="pref_vibrate_sum_vibrate">Vibration only used in vibrate and normal profile</string>
    <string name="pref_vibrate_sum_normal">Vibration only used in normal profile</string>
    <string name="pref_vibrate_sum_always">Always using vibration</string>
    
    <string name="pref_sound_header">Sound</string>
    <string name="pref_sound_val_default">normal</string>
    <string-array name="pref_sound_values">
        <item>never</item>
        <item>normal</item>
        <item>always</item>
    </string-array>
    <string-array name="pref_sound_entries">
        <item>Never</item>
        <item>Only in profile: normal</item>
        <item>Always</item>
    </string-array>
    <string name="pref_sound_sum_never">Never playing a sound</string>
    <string name="pref_sound_sum_normal">Ringtone is only used in normal profile</string>
    <string name="pref_sound_sum_always">Always playing a ringtone</string>
    
    <string name="pref_sound_ringtone_header">Ringtone</string>
    <string name="pref_sound_ringtone_val_default">content://settings/system/alarm_alert</string>
    <string name="pref_log_header">Store log data</string>
</resources>
